# lrnnx

./: .gitignore  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/workflows/: build.yml  publish.yml  test-build.yml  test-publish.yml
benchmarks/: __init__.py  benchmark_cauchy.py  benchmark_cauchy_tune.py  benchmark_inference.py  benchmark_training.py  run_all.py
csrc/: common.h  reverse_scan.cuh
csrc/s4/: cauchy.py  tune_cauchy.py  tuner.py  tuning_setup.py  vandermonde.py
csrc/selective_scan/: bindings.cpp  selective_scan.cuh  selective_scan.h  selective_scan_backward.cuh  selective_scan_cpu.cpp  uninitialized_copy.cuh
csrc/simplified_scan/: bindings.cpp  simplified_scan.cuh  simplified_scan.h  simplified_scan_backward.cuh  simplified_scan_cpu.cpp
docs/: requirements.txt
docs/source/: conf.py  debug.rst  index.rst  lrnnx.models.lti.rst  lrnnx.models.lti.s4d.rst  lrnnx.models.ltv.base.rst  lrnnx.ops.s4_kernel_interface.rst  lrnnx.ops.selective_scan.rst  lrnnx.ops.triton.rst  lrnnx.rst  modules.rst
lrnnx/architectures/: classifier.py  embedding.py  language_model.py  lru_unet.py
lrnnx/core/: base.py  convolution.py  discretization.py
lrnnx/layers/: block.py  mha.py  mlp.py
lrnnx/ops/: __init__.py  rglru_scan.py  s4_kernel_interface.py  s4_utils.py  s7_scan.py  selective_scan.py  simplified_scan.py  torch.py
lrnnx/utils/: __init__.py  generation.py  init.py
tests/architectures/: test_language_model.py
tests/utils/: test_generation.py
(+106 files in other folders)
